--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,10 +1,12 @@
 .box {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex-wrap: wrap;
   border-radius: 5px;
   border: 2px solid rgba(0, 0, 0, 0.39);
   max-width: 250px;
-  height: 350px;
+  height: 400px;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: 0.6s ease-in-out;
