--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,8 @@
 
 body {
   background: url("./images/background.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-repeat: repeat;
+  background-size: 100%;
   object-fit: cover;
 }
 
