--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -37,11 +37,30 @@ a {
 
 @media only screen and (max-width: 600px) {
   .header {
-    font-size: 40px;
+    font-size: 30px;
   }
 
   .footerContent {
     position: relative;
     z-index: 1;
+  }
+  input {
+    width: 350px;
+    margin-right: 50px;
+  }
+  .bigImage {
+    width: 380px !important;
+  }
+
+  .ingredients {
+    width: 380px;
+  }
+  .instructions {
+    width: 380px;
+  }
+  .pages h1 {
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
